Added some error handling to the endpoints